[gd_scene load_steps=10 format=3 uid="uid://celyk57ifua4f"]

[ext_resource type="Script" path="res://assets/objects/world/game_world.gd" id="1_waysh"]
[ext_resource type="Script" path="res://assets/objects/world/block/block_world.gd" id="2_3pcni"]
[ext_resource type="Script" path="res://assets/objects/world/entity/entity_manager.gd" id="3_jc7ju"]
[ext_resource type="Script" path="res://assets/objects/world/item/item_manager.gd" id="3_vg71c"]
[ext_resource type="PackedScene" uid="uid://qhbwwmg422j6" path="res://assets/objects/world/entity/player/player.tscn" id="4_hgqgm"]
[ext_resource type="Script" path="res://assets/objects/world/entity/entity_serializer.gd" id="8_gdq6u"]
[ext_resource type="Script" path="res://assets/objects/world/block/block_serializer.gd" id="8_r3ein"]
[ext_resource type="Script" path="res://assets/objects/world/item/item_serializer.gd" id="9_j762g"]
[ext_resource type="PackedScene" uid="uid://omkj7o5gbs7m" path="res://assets/objects/world/block/block_chunk.tscn" id="19_qsv6g"]

[node name="GameWorld" type="Node2D" node_paths=PackedStringArray("blocks", "items", "entities")]
script = ExtResource("1_waysh")
blocks = NodePath("BlockWorld")
items = NodePath("ItemManager")
entities = NodePath("EntityManager")

[node name="BlockWorld" type="Node2D" parent="." node_paths=PackedStringArray("chunks", "serializer")]
scale = Vector2(16, 16)
script = ExtResource("2_3pcni")
chunk_scene = ExtResource("19_qsv6g")
chunks = NodePath("Chunks")
serializer = NodePath("BlockSerializer")

[node name="Chunks" type="Node2D" parent="BlockWorld"]

[node name="BlockSerializer" type="Node" parent="BlockWorld" node_paths=PackedStringArray("blocks")]
script = ExtResource("8_r3ein")
blocks = NodePath("..")

[node name="ItemManager" type="Node" parent="." node_paths=PackedStringArray("world", "serializer")]
script = ExtResource("3_vg71c")
world = NodePath("..")
serializer = NodePath("ItemSerializer")

[node name="ItemSerializer" type="Node" parent="ItemManager" node_paths=PackedStringArray("items")]
script = ExtResource("9_j762g")
items = NodePath("..")

[node name="EntityManager" type="Node" parent="." node_paths=PackedStringArray("serializer")]
script = ExtResource("3_jc7ju")
serializer = NodePath("EntitySerializer")

[node name="EntitySerializer" type="Node" parent="EntityManager" node_paths=PackedStringArray("entities")]
script = ExtResource("8_gdq6u")
entities = NodePath("..")
player_scene = ExtResource("4_hgqgm")
